--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 				<h2>Список страниц</h2>
 				<h3>Коллекции</h3>
                 <p><a href="varilight_02_collections.html">Коллекции</a></p>
-                <p><a href="varilight_03_collection.html">Карточка коллекция</a></p>
+                <p><a href="varilight_03_collection.html">Карточка коллекции</a></p>
+                <p><a href="varilight_03_collection_loading.html">Карточка коллекции - Загрузка</a></p>
                 <p><a href="varilight_04_product.html">Карточка товара</a></p>
                 <p><a href="varilight_04_product_gold.html">Карточка товара - Золотой</a></p>
                 <p><a href="varilight_05_compare.html">Сравнение товаров</a></p>
