--- a/varilight_01_index.html
+++ b/varilight_01_index.html
@@ -45,15 +45,21 @@
                                         <ul>
                                             <li><a href="#">Информация о компании</a></li>
                                             <li><a href="#">Награды</a></li>
-                                            <li><a href="#">Информация о технических достижениях</a></li>
+                                            <li class="active"><a href="#">Информация о технических достижениях</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="#">Collection</a></li>
                                     <li><a href="#">Design</a></li>
                                     <li><a href="#">Support</a></li>
-                                    <li><a href="#">Varilight TV</a></li>
+                                    <li class="active"><a href="#">Varilight TV</a></li>
                                     <li><a href="#">Contacts</a></li>
                                 </ul>
+                                <div class="nav-contacts">
+                                    <div class="nav-contacts-title">Адрес шоу-рума</div>
+                                    <div class="nav-contacts-value">г. Москва, Научный проезд, д. 19</div>
+                                    <div class="nav-contacts-title">ТЕЛЕФОН</div>
+                                    <div class="nav-contacts-value">+7 (495) 228-32-44</div>
+                                </div>
                                 <div class="nav-social">
                                     <a href="#" target="_blank"><img src="images/social-fb.svg" alt="" /></a>
                                     <a href="#" target="_blank"><img src="images/social-yt.svg" alt="" /></a>
@@ -136,10 +142,10 @@
                                     <div class="collection-products-item-wrap">
                                         <a href="#" class="collection-products-item-inner">
                                             <div class="collection-products-item-preview"><img src="files/main-collection-1-small-1.jpg" alt="" /></div>
-                                            <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                                            <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель</div>
                                             <div class="collection-products-item-price">€ 9.29</div>
                                         </a>
-                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                     </div>
                                 </div>
                                 <div class="collection-products-item gold">
@@ -149,7 +155,7 @@
                                             <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                             <div class="collection-products-item-price">€ 9.29</div>
                                         </a>
-                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -172,7 +178,7 @@
                                             <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                             <div class="collection-products-item-price">€ 9.29</div>
                                         </a>
-                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                     </div>
                                 </div>
                                 <div class="collection-products-item">
@@ -182,7 +188,7 @@
                                             <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                             <div class="collection-products-item-price">€ 9.29</div>
                                         </a>
-                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -319,6 +325,10 @@
                                     <li><a href="#">Выключатели</a></li>
                                     <li><a href="#">Димеры</a></li>
                                     <li><a href="#">Розетки</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#">Электронные устройства</a></li>
+                                    <li><a href="#">Дизайн</a></li>
                                 </ul>
                             </div>
                         </div>
