--- a/varilight_03_collection_loading.html
+++ b/varilight_03_collection_loading.html
@@ -15,7 +15,7 @@
         <meta name="viewport" content="width=device-width" />
     </head>
 
-    <body class="page-404">
+    <body>
 
         <!-- wrapper -->
         <div class="wrapper">
@@ -83,22 +83,109 @@
                 </div>
 
                 <!-- slider -->
-                <div class="slider slider-404">
+                <div class="slider slider-collection">
                     <div class="slider-item">
                         <div class="slider-item-inner">
-                            <div class="slider-item-bg" style="background-image:url(images/page-404-header.jpg)"></div>
+                            <div class="slider-item-bg" style="background-image:url(files/collection-header.jpg)"></div>
                             <div class="slider-item-content">
                                 <div class="container">
-                                    <div class="page-404-title">404</div>
-                                    <div class="page-404-subtitle">Страница не найдена!</div>
-                                    <div class="page-404-text">Это значит, что запрашиваемая вами страница была удалена, перемещена или вы просто набрали неточный адрес</div>
-                                    <div class="slider-item-btn"><a href="#" class="btn">Вернуться на главную</a></div>
+                                    <h1>Коллекция <span>JUBILEE</span></h1>
+                                    <div class="slider-item-text">Это современная интерпретация классического дизайна.<br /> Края рамок декорированы орнаментом из бисера, напоминающем об очаровательном и изящном неоклассическом стиле.</div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- slider END -->
+
+                <!-- container -->
+                <div class="container">
+
+                    <div class="breadcrumbs"><a href="#">Varilight</a><span></span><a href="#">Коллекции</a><span></span>Коллекция JUBILEE</div>
+                    <div class="back-link"><a href="#">Коллекции</a></div>
+
+                    <h2>Покрытия</h2>
+
+                    <!-- collection surface -->
+                    <div class="collection-surface">
+                        <div class="collection-surface-photo"><img src="files/collection-surface.jpg" alt="" /></div>
+                        <div class="collection-surface-list">
+                            <div class="collection-surface-item">
+                                <div class="collection-surface-item-preview"><img src="files/collection-surface-1.jpg" alt="" /></div>
+                                <div class="collection-surface-item-title">Brushed Brass</div>
+                            </div>
+                            <div class="collection-surface-item">
+                                <div class="collection-surface-item-preview"><img src="files/collection-surface-2.jpg" alt="" /></div>
+                                <div class="collection-surface-item-title">Polisher Chrome</div>
+                            </div>
+                            <div class="collection-surface-item">
+                                <div class="collection-surface-item-preview"><img src="files/collection-surface-3.jpg" alt="" /></div>
+                                <div class="collection-surface-item-title">Iridium Black</div>
+                            </div>
+                            <div class="collection-surface-item">
+                                <div class="collection-surface-item-preview"><img src="files/collection-surface-4.jpg" alt="" /></div>
+                                <div class="collection-surface-item-title">Brushed Steel</div>
+                            </div>
+                            <div class="collection-surface-item">
+                                <div class="collection-surface-item-preview"><img src="files/collection-surface-5.jpg" alt="" /></div>
+                                <div class="collection-surface-item-title">Polisher  Brass</div>
+                            </div>
+                            <div class="collection-surface-item">
+                                <div class="collection-surface-item-preview"><img src="files/collection-surface-6.jpg" alt="" /></div>
+                                <div class="collection-surface-item-title">Satin Chrome</div>
+                            </div>
+                            <div class="collection-surface-item">
+                                <div class="collection-surface-item-preview"><img src="files/collection-surface-7.jpg" alt="" /></div>
+                                <div class="collection-surface-item-title">Brushed Steel</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- collection surface END -->
+
+                    <!-- collection products -->
+                    <div class="collection-products">
+                        <div class="collection-products-header">
+                            <h2>Товары коллекции</h2>
+                        </div>
+
+                        <div class="collection-products-container loading">
+                        </div>
+
+                    </div>
+                    <!-- collection products END -->
+
+                    <!-- collection download -->
+                    <div class="collection-download">
+                        <h2>Скачать</h2>
+
+                        <div class="download-list">
+                            <div class="download-group">
+                                <div class="download-item">
+                                    <div class="download-item-link"><a href="#"><span>Сертификат соответствия</span> PDF 2.4mb</a></div>
+                                    <div class="download-item-text">Внешний вид документов о соответствии довольно часто интересует компании, которые выставляют.</div>
+                                </div>
+                                <div class="download-item">
+                                    <div class="download-item-link"><a href="#"><span>RCU Product Family EAE-KNX Room Control Units</span> PDF 3 MB</a></div>
+                                </div>
+                                <div class="download-item">
+                                    <div class="download-item-link"><a href="#"><span>DA100 EAE-KNX Dali Gateway</span> PDF 3 MB</a></div>
+                                </div>
+                            </div>
+                            <div class="download-group">
+                                <div class="download-item">
+                                    <div class="download-item-link"><a href="#"><span>Каталог Varilight 2019</span> PDF 2.4mb</a></div>
+                                    <div class="download-item-text">Внешний вид документов о соответствии довольно часто интересует компании, которые выставляют.</div>
+                                </div>
+                                <div class="download-item">
+                                    <div class="download-item-link"><a href="#"><span>Каталог Varilight 2018</span> PDF 2.4mb</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- collection download END -->
+
+                </div>
+                <!-- container END -->
 
             </div>
         </div>
