--- a/varilight_06_dimmer.html
+++ b/varilight_06_dimmer.html
@@ -45,15 +45,21 @@
                                         <ul>
                                             <li><a href="#">Информация о компании</a></li>
                                             <li><a href="#">Награды</a></li>
-                                            <li><a href="#">Информация о технических достижениях</a></li>
+                                            <li class="active"><a href="#">Информация о технических достижениях</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="#">Collection</a></li>
                                     <li><a href="#">Design</a></li>
                                     <li><a href="#">Support</a></li>
-                                    <li><a href="#">Varilight TV</a></li>
+                                    <li class="active"><a href="#">Varilight TV</a></li>
                                     <li><a href="#">Contacts</a></li>
                                 </ul>
+                                <div class="nav-contacts">
+                                    <div class="nav-contacts-title">Адрес шоу-рума</div>
+                                    <div class="nav-contacts-value">г. Москва, Научный проезд, д. 19</div>
+                                    <div class="nav-contacts-title">ТЕЛЕФОН</div>
+                                    <div class="nav-contacts-value">+7 (495) 228-32-44</div>
+                                </div>
                                 <div class="nav-social">
                                     <a href="#" target="_blank"><img src="images/social-fb.svg" alt="" /></a>
                                     <a href="#" target="_blank"><img src="images/social-yt.svg" alt="" /></a>
@@ -344,6 +350,10 @@
                                     <li><a href="#">Выключатели</a></li>
                                     <li><a href="#">Димеры</a></li>
                                     <li><a href="#">Розетки</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#">Электронные устройства</a></li>
+                                    <li><a href="#">Дизайн</a></li>
                                 </ul>
                             </div>
                         </div>
