--- a/varilight_04_product_gold.html
+++ b/varilight_04_product_gold.html
@@ -45,15 +45,21 @@
                                         <ul>
                                             <li><a href="#">Информация о компании</a></li>
                                             <li><a href="#">Награды</a></li>
-                                            <li><a href="#">Информация о технических достижениях</a></li>
+                                            <li class="active"><a href="#">Информация о технических достижениях</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="#">Collection</a></li>
                                     <li><a href="#">Design</a></li>
                                     <li><a href="#">Support</a></li>
-                                    <li><a href="#">Varilight TV</a></li>
+                                    <li class="active"><a href="#">Varilight TV</a></li>
                                     <li><a href="#">Contacts</a></li>
                                 </ul>
+                                <div class="nav-contacts">
+                                    <div class="nav-contacts-title">Адрес шоу-рума</div>
+                                    <div class="nav-contacts-value">г. Москва, Научный проезд, д. 19</div>
+                                    <div class="nav-contacts-title">ТЕЛЕФОН</div>
+                                    <div class="nav-contacts-value">+7 (495) 228-32-44</div>
+                                </div>
                                 <div class="nav-social">
                                     <a href="#" target="_blank"><img src="images/social-fb.svg" alt="" /></a>
                                     <a href="#" target="_blank"><img src="images/social-yt.svg" alt="" /></a>
@@ -81,7 +87,9 @@
                     <div class="container">
                         <div class="product-header-container">
                             <div class="product-header-inner">
-                                <div class="product-header-photo"><img src="files/product-header-photo.jpg" alt="" /></div>
+                                <div class="product-header-photo">
+                                    <div class="product-header-photo-inner"><img src="files/product-header-photo-gold.jpg" alt="" /></div>
+                                </div>
                                 <div class="product-header-content">
                                     <div class="product-header-art">Z1EGP2</div>
                                     <h1>Двойной выключатель с&nbsp;2-х мест с кнопкой 6А</h1>
@@ -146,13 +154,13 @@
                     <div class="product-gallery gold">
                         <div class="gallery">
                             <div class="gallery-item">
-                                <div class="gallery-item-photo"><img src="files/product-header-photo.jpg" alt="" /></div>
+                                <div class="gallery-item-photo"><img src="files/product-header-photo-gold.jpg" alt="" /></div>
                             </div>
                             <div class="gallery-item">
-                                <div class="gallery-item-photo"><img src="files/product-header-photo.jpg" alt="" /></div>
+                                <div class="gallery-item-photo"><img src="files/product-header-photo-gold.jpg" alt="" /></div>
                             </div>
                             <div class="gallery-item">
-                                <div class="gallery-item-photo"><img src="files/product-header-photo.jpg" alt="" /></div>
+                                <div class="gallery-item-photo"><img src="files/product-header-photo-gold.jpg" alt="" /></div>
                             </div>
                         </div>
                     </div>
@@ -191,16 +199,11 @@
                     <div class="product-other">
 
                         <div class="product-other-menu">
-                            <div class="product-other-menu-current">Вы смотрели</div>
-                            <ul>
-                                <li class="active"><a href="#">Вы смотрели</a></li>
-                                <li><a href="#">Наши рекоммендации</a></li>
-                                <li><a href="#">Скидки</a></li>
-                            </ul>
+                            <div class="product-other-menu-current"></div>
                         </div>
 
                         <div class="product-other-tabs">
-                            <div class="product-other-tab active">
+                            <div class="product-other-tab active" data-title="Вы смотрели">
                                 <div class="collection-products-list">
                                     <div class="collection-products-item">
                                         <div class="collection-products-item-wrap">
@@ -209,18 +212,18 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
                                     <div class="collection-products-item gold">
                                         <div class="collection-products-item-wrap">
                                             <a href="#" class="collection-products-item-inner">
-                                                <div class="collection-products-item-preview"><img src="files/collection-item-2.jpg" alt="" /><div class="collection-products-item-discontinued">Снято с производства</div></div>
-                                                <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                                                <div class="collection-products-item-preview"><img src="files/collection-item-7.jpg" alt="" /><div class="collection-products-item-discontinued">Снято с производства</div></div>
+                                                <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
@@ -231,7 +234,7 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
@@ -242,14 +245,14 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
                                 </div>
                             </div>
 
-                            <div class="product-other-tab">
+                            <div class="product-other-tab" data-title="Наши рекоммендации">
                                 <div class="collection-products-list">
                                     <div class="collection-products-item">
                                         <div class="collection-products-item-wrap">
@@ -258,7 +261,7 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
@@ -269,7 +272,7 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
@@ -280,7 +283,7 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
@@ -291,13 +294,13 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="product-other-tab">
+                            <div class="product-other-tab" data-title="Скидки">
                                 <div class="collection-products-list">
                                     <div class="collection-products-item">
                                         <div class="collection-products-item-wrap">
@@ -306,7 +309,7 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
@@ -317,7 +320,7 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
@@ -328,7 +331,7 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
@@ -339,7 +342,7 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
 
@@ -350,7 +353,7 @@
                                                 <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
                                                 <div class="collection-products-item-price">€ 9.29</div>
                                             </a>
-                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                            <div class="collection-products-item-compare"><a href="#">в сравнение</a><a href="#">сравнить</a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -414,6 +417,10 @@
                                     <li><a href="#">Выключатели</a></li>
                                     <li><a href="#">Димеры</a></li>
                                     <li><a href="#">Розетки</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#">Электронные устройства</a></li>
+                                    <li><a href="#">Дизайн</a></li>
                                 </ul>
                             </div>
                         </div>
