--- a/varilight_04_product_gold.html
+++ b/varilight_04_product_gold.html
@@ -154,7 +154,7 @@
                     <div class="product-gallery gold">
                         <div class="gallery">
                             <div class="gallery-item">
-                                <div class="gallery-item-photo"><img src="files/product-header-photo-gold.jpg" alt="" /></div>
+                                <div class="gallery-item-photo"><img src="files/product-gallery-photo-4.png" alt="" /></div>
                             </div>
                             <div class="gallery-item">
                                 <div class="gallery-item-photo"><img src="files/product-header-photo-gold.jpg" alt="" /></div>
