--- a/varilight_04_product_gold.html
+++ b/varilight_04_product_gold.html
@@ -88,7 +88,7 @@
                         <div class="product-header-container">
                             <div class="product-header-inner">
                                 <div class="product-header-photo">
-                                    <div class="product-header-photo-inner"><img src="files/product-header-photo-gold.jpg" alt="" /></div>
+                                    <div class="product-header-photo-inner"><img src="files/product-gallery-photo-4.png" alt="" /></div>
                                 </div>
                                 <div class="product-header-content">
                                     <div class="product-header-art">Z1EGP2</div>
